--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <title>App</title>
     
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="manifest" href="./src/public/manifest.json" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./src/scripts/index.js"></script>
   </head>
   <body>
     <a href="#main-content" class="skip-to-content">Skip to Content</a>
